
=== ppracer 0.5 alpha2 ===

2005-11-26  Volker Stroebel <volker@planetpenguin.de>
	* src/tux_shadow.cpp
	changed some code to use ppogl::Vec3d

2005-11-25  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	fixes
	
	* src/ppogl/ui/listbox.h
	fixed up/down button states

2005-11-23  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	cleanups
	
	* data/translations/en_GB.nut 
	  data/translations/nn_NO.nut
	updated translations (Karl Ove Hufthammer)
	
	* data/models/tux2/model.nut
	changed color (Sergej Kotliar)

2005-11-21  Volker Stroebel <volker@planetpenguin.de>
	* src/joystick.* data/config.nut.in
	fixed joystick support
	added class Joystick
	
	* src/*
	changed code to use new Joystick class

2005-11-06  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	fixed crash

2005-11-04  Volker Stroebel <volker@planetpenguin.de>
	* src/fog.cpp src/gameconfig.*
	cached disable_fog
	
	* src/ui_snow.cpp
	fixed positions for modifications
	
	* src/hier.*
	added update_scene_nodes

2005-11-03  Volker Stroebel <volker@planetpenguin.de>
	* src/fps.* src/* data/config.nut.in
	added max fps for gui and racing

2005-11-02  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	replaced several macros with inline functions
	removed several unused macros
	code cleanups

2005-11-01  Volker Stroebel <volker@planetpenguin.de>
	* src/elements.* src/course_load.cpp
	added simple scale and rotation support for models

2005-10-31  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	some scary cleanups

	* src/ppogl/ui/frame.*
	removed scary frame widget
	
	* src/paused.*
	replaced scary frame widget with dark scary background
	
	* src/*
	fixed scary build errors
	fixed scary build problems w/o SDL_mixer
	fixed scary build problems w/ gcc 2.95

2005-10-30  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/audio/audiomgr.cpp
	fix memleak in destructor
	
	* src/track_marks.*
	fixed uninitialized values
	fixed possible gpf
	cleanups
	
	* src/ppogl/base/errors.cpp