@@ -23,84 +23,6 @@
 
 namespace ppogl{
 
-Vec3d::Vec3d()
-{
-	values[0]=0.0;
-	values[1]=0.0;
-	values[2]=0.0;
-}
-	
-Vec3d::Vec3d(const double x, const double y, const double z)
-{
-	values[0]=x;
-	values[1]=y;
-	values[2]=z;	
-}
-
-double 
-Vec3d::normalize()
-{
-    const double len = length();
-	if(len>0.0){
-		x() /= len;
-		y() /= len;
-		z() /= len;
-	}                
-	return len;
-}
-
-double
-Vec3d::length() const
-{
-	return sqrt(x()*x()+y()*y()+z()*z());
-}
-
-double
-Vec3d::length2() const
-{
-	return x()*x()+y()*y()+z()*z();
-}
-
-Vec3d
-operator+(const Vec3d& vec1,const Vec3d& vec2)
-{
-	return Vec3d(vec1.x()+vec2.x(),vec1.y()+vec2.y(),vec1.z()+vec2.z());
-}
-
-Vec3d
-operator-(const Vec3d& vec1,const Vec3d& vec2)
-{
-	return Vec3d(vec1.x()-vec2.x(),vec1.y()-vec2.y(),vec1.z()-vec2.z());
-}
-
-Vec3d
-operator*(const Vec3d& vec, const double scalar)
-{
-	return Vec3d(vec.x()*scalar,vec.y()*scalar,vec.z()*scalar);
-}
-
-Vec3d
-operator*(const double scalar, const Vec3d& vec)
-{
-	return Vec3d(vec.x()*scalar,vec.y()*scalar,vec.z()*scalar);
-}
-
-double
-operator*(const Vec3d& vec1,const Vec3d& vec2)
-{
-	return vec1.x()*vec2.x()+vec1.y()*vec2.y()+vec1.z()*vec2.z();
-}
-
-Vec3d 
-operator^(const Vec3d& vec1,const Vec3d& vec2)
-{
-	return Vec3d(
-		vec1.y() * vec2.z() - vec1.z() * vec2.y(),
-		vec1.z() * vec2.x() - vec1.x() * vec2.z(),
-		vec1.x() * vec2.y() - vec1.y() * vec2.x()
-	);
-}
-
 std::ostream& operator << (std::ostream& output, const Vec3d& vec)
 {
 	output 	<< vec.values[0] << ":"
